day21-userdata-automation/main.tf
resource "aws_vpc" "main_vpc" {
cidr_block = "10.0.0.0/16"

tags = {
Name = "Day21-VPC"
}
}

resource "aws_subnet" "public_subnet" {
vpc_id                  = aws_vpc.main_vpc.id
cidr_block              = "10.0.1.0/24"
map_public_ip_on_launch = true
availability_zone       = "ap-south-1a"

tags = {
Name = "Day21-Public-Subnet"
}
}

resource "aws_internet_gateway" "igw" {
vpc_id = aws_vpc.main_vpc.id

tags = {
Name = "Day21-IGW"
}
}

resource "aws_route_table" "public_rt" {
vpc_id = aws_vpc.main_vpc.id

route {
cidr_block = "0.0.0.0/0"
gateway_id = aws_internet_gateway.igw.id
}

tags = {
Name = "Day21-Public-RT"
}
}

resource "aws_route_table_association" "public_assoc" {
subnet_id      = aws_subnet.public_subnet.id
route_table_id = aws_route_table.public_rt.id
}

resource "aws_security_group" "web_sg" {
name   = "day21-web-sg"
vpc_id = aws_vpc.main_vpc.id

ingress {
description = "SSH Access"
from_port   = 22
to_port     = 22
protocol    = "tcp"
cidr_blocks = ["0.0.0.0/0"]
}

ingress {
description = "HTTP Access"
from_port   = 80
to_port     = 80
protocol    = "tcp"
cidr_blocks = ["0.0.0.0/0"]
}

egress {
from_port   = 0
to_port     = 0
protocol    = "-1"
cidr_blocks = ["0.0.0.0/0"]
}

tags = {
Name = "Day21-Web-SG"
}
}

resource "aws_instance" "web_server" {
ami                    = "ami-0e35ddab05955cf57"
instance_type          = "t3.micro"
subnet_id              = aws_subnet.public_subnet.id
vpc_security_group_ids = [aws_security_group.web_sg.id]

user_data = <<-EOT
#!/bin/bash
cd /home/ec2-user
echo "<h1>Day 21 Automated Web Server</h1>" > index.html
nohup python3 -m http.server 80 &
EOT

tags = {
Name = "Day21-WebServer"
}
}
